@@ -21,9 +21,9 @@ package org.apache.bookkeeper.mledger.impl;
 import static org.testng.Assert.assertEquals;
 import static org.testng.Assert.assertFalse;
 import static org.testng.Assert.assertNotEquals;
+import static org.testng.Assert.assertThrows;
 import static org.testng.Assert.assertTrue;
 import static org.testng.Assert.fail;
-import com.google.common.collect.ImmutableSet;
 import java.lang.reflect.Field;
 import java.util.HashMap;
 import java.util.Map;
@@ -49,6 +49,8 @@ import org.apache.bookkeeper.mledger.proto.MLDataFormats.ManagedLedgerInfo.Ledge
 import org.apache.bookkeeper.test.MockedBookKeeperTestCase;
 import org.apache.commons.lang3.tuple.Pair;
 import org.apache.pulsar.common.policies.data.OffloadPoliciesImpl;
+import org.apache.pulsar.metadata.api.MetadataStoreException;
+import org.apache.pulsar.metadata.impl.FaultInjectionMetadataStore;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.testng.annotations.Test;
@@ -126,6 +128,51 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
                             .filter(e -> e.getOffloadContext().getComplete())
                             .map(e -> e.getLedgerId()).collect(Collectors.toSet()),
                             offloader.offloadedLedgers());
+
+        // ledgers should be marked as offloaded
+        ledger.getLedgersInfoAsList().stream().allMatch(l -> l.hasOffloadContext());
+    }
+
+    @Test
+    public void testOffloadFenced() throws Exception {
+        MockLedgerOffloader offloader = new MockLedgerOffloader();
+        ManagedLedgerConfig config = new ManagedLedgerConfig();
+        config.setMaxEntriesPerLedger(10);
+        config.setMinimumRolloverTime(0, TimeUnit.SECONDS);
+        config.setRetentionTime(10, TimeUnit.MINUTES);
+        config.setRetentionSizeInMB(10);
+        config.setLedgerOffloader(offloader);
+        ManagedLedgerImpl ledger = (ManagedLedgerImpl)factory.open("my_test_ledger", config);
+
+        int i = 0;
+        for (; i < 25; i++) {
+            String content = "entry-" + i;
+            ledger.addEntry(content.getBytes());
+        }
+        assertEquals(ledger.getLedgersInfoAsList().size(), 3);
+
+        metadataStore.failConditional(new MetadataStoreException.BadVersionException("err"), (op, path) ->
+                path.equals("/managed-ledgers/my_test_ledger")
+                        && op == FaultInjectionMetadataStore.OperationType.PUT
+        );
+
+        assertThrows(ManagedLedgerException.ManagedLedgerFencedException.class, () ->
+            ledger.offloadPrefix(ledger.getLastConfirmedEntry()));
+
+        assertEquals(ledger.getLedgersInfoAsList().size(), 3);
+
+        // the offloader actually wrote the data on the storage
+        assertEquals(ledger.getLedgersInfoAsList().stream()
+                        .filter(e -> e.getOffloadContext().getComplete())
+                        .map(e -> e.getLedgerId()).collect(Collectors.toSet()),
+                offloader.offloadedLedgers());
+
+        // but the ledgers should not be marked as offloaded in local memory, as the write to metadata failed
+        ledger.getLedgersInfoAsList().stream().allMatch(l -> !l.hasOffloadContext());
+
+        // check that the ledger is fenced
+        assertEquals(ManagedLedgerImpl.State.Fenced, ledger.getState());
+
     }
 
     @Test
@@ -460,7 +507,7 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
         assertEquals(ledger.getLedgersInfoAsList().size(), 4);
 
         // mark ledgers to fail
-        promise.complete(ImmutableSet.of(ledger.getLedgersInfoAsList().get(failIndex).getLedgerId()));
+        promise.complete(Set.of(ledger.getLedgersInfoAsList().get(failIndex).getLedgerId()));
 
         try {
             ledger.offloadPrefix(ledger.getLastConfirmedEntry());
@@ -727,7 +774,7 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
                             .filter(e -> e.getOffloadContext().getComplete())
                             .map(e -> e.getLedgerId()).collect(Collectors.toSet()),
                             offloader.offloadedLedgers());
-        assertEquals(offloader.offloadedLedgers(), ImmutableSet.of(firstLedgerId, thirdLedgerId));
+        assertEquals(offloader.offloadedLedgers(), Set.of(firstLedgerId, thirdLedgerId));
     }
 
     private static byte[] buildEntry(int size, String pattern) {
@@ -762,7 +809,7 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
         // offload should eventually be triggered
         assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 1);
         assertEquals(offloader.offloadedLedgers(),
-                            ImmutableSet.of(ledger.getLedgersInfoAsList().get(0).getLedgerId()));
+                Set.of(ledger.getLedgersInfoAsList().get(0).getLedgerId()));
     }
 
     @Test
@@ -811,7 +858,7 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
         // eventually all over threshold will be offloaded
         assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 3);
         assertEquals(offloader.offloadedLedgers(),
-                            ImmutableSet.of(ledger.getLedgersInfoAsList().get(0).getLedgerId(),
+                Set.of(ledger.getLedgersInfoAsList().get(0).getLedgerId(),
                                             ledger.getLedgersInfoAsList().get(1).getLedgerId(),
                                             ledger.getLedgersInfoAsList().get(2).getLedgerId()));
 
@@ -820,7 +867,7 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
 
         assertEquals(offloader.offloadedLedgers().size(), 4);
         assertEquals(offloader.offloadedLedgers(),
-                            ImmutableSet.of(ledger.getLedgersInfoAsList().get(0).getLedgerId(),
+                Set.of(ledger.getLedgersInfoAsList().get(0).getLedgerId(),
                                             ledger.getLedgersInfoAsList().get(1).getLedgerId(),
                                             ledger.getLedgersInfoAsList().get(2).getLedgerId(),
                                             ledger.getLedgersInfoAsList().get(3).getLedgerId()));
@@ -873,7 +920,7 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
         // auto trigger should eventually offload everything else over threshold
         assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 2);
         assertEquals(offloader.offloadedLedgers(),
-                            ImmutableSet.of(ledger.getLedgersInfoAsList().get(0).getLedgerId(),
+                Set.of(ledger.getLedgersInfoAsList().get(0).getLedgerId(),
                                             ledger.getLedgersInfoAsList().get(1).getLedgerId()));
     }
 
@@ -918,7 +965,7 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
 
         assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 3);
         assertEquals(offloader.offloadedLedgers(),
-                            ImmutableSet.of(ledger.getLedgersInfoAsList().get(0).getLedgerId(),
+                Set.of(ledger.getLedgersInfoAsList().get(0).getLedgerId(),
                                             ledger.getLedgersInfoAsList().get(1).getLedgerId(),
                                             ledger.getLedgersInfoAsList().get(2).getLedgerId()));
     }
@@ -941,7 +988,7 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
 
         assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 1);
         assertEquals(offloader.offloadedLedgers(),
-                            ImmutableSet.of(ledger.getLedgersInfoAsList().get(0).getLedgerId()));
+                Set.of(ledger.getLedgersInfoAsList().get(0).getLedgerId()));
 
         for (int i = 0; i < 10; i++) {
             ledger.addEntry(buildEntry(10, "entry-" + i));
@@ -949,7 +996,7 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
 
         assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 2);
         assertEquals(offloader.offloadedLedgers(),
-                            ImmutableSet.of(ledger.getLedgersInfoAsList().get(0).getLedgerId(),
+                Set.of(ledger.getLedgersInfoAsList().get(0).getLedgerId(),
                                             ledger.getLedgersInfoAsList().get(1).getLedgerId()));
     }
 
